@@ -196,10 +196,16 @@ void get_options(int argc,char **argv)
 	    break;
         case 'r':
             RandomPw = 1;
-            if (optarg)
-              vrandom_pass (Passwd, atoi(optarg));
-            else
+            if (optarg) {
+                int sz = atoi(optarg);
+                if (sz > 128) {
+                    printf("Error: %s\n", verror(VA_PASSWD_TOO_LONG));
+                    vexit(VA_PASSWD_TOO_LONG);
+                }
+                vrandom_pass (Passwd, atoi(optarg));
+            } else {
               vrandom_pass (Passwd, 12);
+            }
             break;
 	default:
 	    errflag = 1;
