@@ -749,6 +749,7 @@ int vadduser( char *username, char *domain, char *password, char *gecos,
   if ( strlen(domain) < 3) return(VA_INVALID_DOMAIN_NAME);
 
   if ( strlen(password) > MAX_PW_CLEAR_PASSWD ) return(VA_PASSWD_TOO_LONG);
+  if ( strlen(password) < MIN_PW_CLEAR_PASSWD ) return(VA_PASSWD_TOO_SHORT);
   if ( strlen(gecos) > MAX_PW_GECOS )    return(VA_GECOS_TOO_LONG);
 
   umask(VPOPMAIL_UMASK);
@@ -1653,6 +1654,7 @@ int vpasswd( char *username, char *domain, char *password, int apop )
 #endif
   if ( strlen(domain) > MAX_PW_DOMAIN ) return(VA_DOMAIN_NAME_TOO_LONG);
   if ( strlen(password) > MAX_PW_CLEAR_PASSWD ) return(VA_PASSWD_TOO_LONG);
+  if ( strlen(password) < MIN_PW_CLEAR_PASSWD ) return(VA_PASSWD_TOO_SHORT);
 
   lowerit(username);
   lowerit(domain);
@@ -2924,6 +2926,8 @@ char *verror(int va_err )
     return("can't read users/assign file");
    case VA_CANNOT_DELETE_CATCHALL:
     return("can't delete catchall account");
+   case VA_PASSWD_TOO_SHORT:
+    return("password too short");    
    default:
     return("Unknown error");
   }
